; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/openbsd-compat/regress/extr_strtonumtest.c_test.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/openbsd-compat/regress/extr_strtonumtest.c_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"%s [%lld-%lld] \00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"NUMBER NOT ACCEPTED %s\0A\00", align 1
@fail = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [21 x i8] c"%s [%lld-%lld] %lld \00", align 1
@.str.3 = private unnamed_addr constant [17 x i8] c"NUMBER ACCEPTED\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test(i8* %0, i64 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i64 @strtonum(i8* %11, i64 %12, i64 %13, i8** %10)
  store i64 %14, i64* %9, align 8
  %15 = load i32, i32* %8, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %29

17:                                               ; preds = %4
  %18 = load i8*, i8** %10, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %29

20:                                               ; preds = %17
  %21 = load i32, i32* @stderr, align 4
  %22 = load i8*, i8** %5, align 8
  %23 = load i64, i64* %6, align 8
  %24 = load i64, i64* %7, align 8
  %25 = call i32 (i32, i8*, ...) @fprintf(i32 %21, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %22, i64 %23, i64 %24)
  %26 = load i32, i32* @stderr, align 4
  %27 = load i8*, i8** %10, align 8
  %28 = call i32 (i32, i8*, ...) @fprintf(i32 %26, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i8* %27)
  store i32 1, i32* @fail, align 4
  br label %45

29:                                               ; preds = %17, %4
  %30 = load i32, i32* %8, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %44, label %32

32:                                               ; preds = %29
  %33 = load i8*, i8** %10, align 8
  %34 = icmp eq i8* %33, null
  br i1 %34, label %35, label %44

35:                                               ; preds = %32
  %36 = load i32, i32* @stderr, align 4
  %37 = load i8*, i8** %5, align 8
  %38 = load i64, i64* %6, align 8
  %39 = load i64, i64* %7, align 8
  %40 = load i64, i64* %9, align 8
  %41 = call i32 (i32, i8*, ...) @fprintf(i32 %36, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i8* %37, i64 %38, i64 %39, i64 %40)
  %42 = load i32, i32* @stderr, align 4
  %43 = call i32 (i32, i8*, ...) @fprintf(i32 %42, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0))
  store i32 1, i32* @fail, align 4
  br label %44

44:                                               ; preds = %35, %32, %29
  br label %45

45:                                               ; preds = %44, %20
  ret void
}

declare dso_local i64 @strtonum(i8*, i64, i64, i8**) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
